--- a/bambamWP/Pages/BambamLayout.razor
+++ b/bambamWP/Pages/BambamLayout.razor
@@ -7,8 +7,8 @@
         <NavLink class="bbnavbarlink" href="repartidores">
             Repartidores
         </NavLink>
-        <NavLink class="bbnavbarlink" href="counter">
-            The counter
+        <NavLink class="bbnavbarlink" href="productos">
+            Productos
         </NavLink>
         <NavLink class="bbnavbarimglink" href="perfil">
             <img src="images/bambamprofile.png" />
